# bird-behavior

./: README.md  pyproject.toml  requirements.txt  setup.py
    notebooks/: classify_birds.ipynb
.github/workflows/: test.yml
app/: bird_behavior_viz_app.py  gps_locations_viz.py  test.py  testapp.py  testgradio.py
behavior/: check.py  data.py  data_augmentation.py  data_processing.py  helpers.py  interactive_map.py  map.py  metrics.py  model.py  model1d.py  model_utils.py  plpython3u.py  prepare.py  semisup_batchkmeans.py  ss_kmeans.py  transformer.py  utils.py
configs/: classification.yaml  cluster.yaml  ds.yaml  finetune_memory_load.yaml  main_finetune.yaml  main_pretrain.yaml  pretrain_memory_load.yaml  train.yaml
data/: data.csv  data_from_db.csv  input.csv  slice_w_data.csv
docker/: dockerfile
docs/: clustering.md  configs.md  data.md  description.md  descritions.md  details.md  efficient_data_loading.md  models.md  pandas.md  postgres_plpython3u.md
exps/: README.md  bird_behavior.ipynb  birdvis_query.py  chronos2.py  cluster_behavior.py  distribution_metrics.py  exps1.py  figures_for_paper.py  moment_test.py  prepare_labeled_data.py  save_plots.py  save_plots_gt.py  simGCD.py  ss_cluster_behavior.py  ss_cluster_behavior_old.py  visualize.py
notebooks/: classify_birds.ipynb  read_osm_map_find_water.ipynb
scripts/: batch_train_cluster.py  bird_behavior_viz.py  classify_birds.py  embeddings_plot.py  finetune_memory_load.py  gcd_pipeline.py  get_data.py  get_data_gull_20.py  main_finetune.py  main_pretrain.py  moment_finetune.py  moment_pretrain.py  prepare_labeled_data.py  pretrain_memory_load.py  run.sh  slurm_run.sh  ss_cluster_behavior.py  train.py  train_contrastive.py  train_self_distill.py
slurm/: moment_test_hipster.slurm  moment_test_snellius.slurm  self_distill_snellius.slurm
tests/: debugging.py  imu_3d_movie.py  panda_csv_python_read_data_in_memory.py  pretrain_memory_load.py  test_bird_classification.py  test_data.py  test_data_augmentation.py  test_data_processing.py  test_model.py  test_utils.py
