[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bird_behavior"
version = "0.1"
description = "Library for deep-learning based bird behavior"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }  # Correctly specifying the license
authors = [
    { name = "Fatemeh Karimi Nejadasl", email = "fkariminejadasl@gmail.com" }
]
urls = { "Homepage" = "https://github.com/fkariminejadasl/bird-behavior.git" }

[project.optional-dependencies]
dev = [
    # List any additional dependencies for development
]

[tool.setuptools.packages.find]
where = ["."]
include = ["behavior"]