[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bird_behavior"
version = "0.1"
description = "Library for deep-learning based bird behavior"
readme = { file = "README.md", content-type = "text/markdown" }
license = {file = "LICENSE"}
requires-python = ">= 3.9"
authors = [
    { name = "Fatemeh Karimi Nejadasl", email = "fkariminejadasl@gmail.com" }
]
urls = { "Homepage" = "https://github.com/fkariminejadasl/bird-behavior.git" }

# Dependencies are copied from requirements.txt 
dependencies = [
    "einops",
    "matplotlib>=3.6.1",
    "numpy>=1.23.3",
    "tqdm",
    "tensorboard",
    "psycopg2-binary",
    "timm",
    "torch",
    "torchvision",
    "scikit-learn>=1.3",
    "pandas",
    "omegaconf",
]

# pip install .[notebook]
[project.optional-dependencies]
notebook = [
    "gdown>=5.2.0",
    "requests>=2.32.3",
]
# for app: pip install fastapi uvicorn python-multipart gradio build
# pip install .[app]
app = [
    "gradio",
]
# pip install .[test]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["behavior"]

# for test with markers. Use pytest -s sometest.py  -m "not ignore"
# for all tests with markers: pytest tests  -m "not ignore and not debug"
[tool.pytest.ini_options]
markers = [
    "ignore: mark test as ignored",
    "local: mark test as run locally",
    "debug: mark test as debug",
]

# For linters:
# for i in app tests exps scripts behavior;do echo $i; black $i -l 88; isort $i --profile black; pyflakes $i;done

# Remove packages completely
# pip-autoremove -y bird_behavior einops matplotlib numpy tqdm tensorboard psycopg2-binary timm torch torchvision scikit-learn pandas omegaconf 
# pip-autoremove -y certifi charset-normalizer click docker-pycreds gitdb GitPython idna pip-autoremove platformdirs protobuf psutil PyYAML requests sentry-sdk setproctitle six smmap typing_extensions urllib3 wandb
# pip uninstall -y pip-autoremove
